# DalQ

./: CMakeLists.txt  README.md  build.sh
include/: dalq.h  fvecs_reader.h  ivf_dalq_index.h  vector_utils.h
src/: create_index.cpp  dalq.cpp  fvecs_reader.cpp  ivf_dalq_index.cpp  test_mse.cpp  test_qps.cpp  vector_utils.cpp
